--- a/index.html
+++ b/index.html
@@ -251,8 +251,11 @@
             required=""
             maxlength="50"
           ></textarea>
+          <div class="row">
+            <input type="submit" value="Get in touch" />
+          </div>
         </form>
-        <input type="submit" value="Get in touch" />
+
         <div class="contact-img"></div>
       </section>
       <footer class="intro-section margin-left-right-auto">
