adding image content

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         </footer>
       </section>
       <article class="recent">
+        <img class="vector-img" src="./image/vector.svg" alt="vector" />
         <h2 class="works-header">My Recent Works</h2>
         <span class="line"></span>
         <article class="works">
