--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           I'm always interested in hearing about new project, so if you'd like to chat please get in
           touch.
         </h4>
-        <form action="https://formspree.io/f/mbjwdkeq" method="post">
+        <form action="https://formspree.io/f/mbjwdkeq" class="form-container" method="post">
           <input
             type="text"
             name="name"
