adding new content

--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
       <article class="recent">
         <img class="vector-img" src="./image/vector.svg" alt="vector" />
         <h2 class="works-header">My Recent Works</h2>
-        <span class="line"></span>
         <article class="works">
           <div class="grid">
             <div class="grid-item">
@@ -181,53 +180,46 @@
         </p>
         <button-type class="about-btn">Get My Resume</button-type>
         <div class="about2"></div>
-
-        <section class="flex-container margin-left-right-auto">
-          <div class="flex-box">
-            <p class="attribute-ellip">
-              <img class="attribute-img" src="./image/language.svg" alt="lang" />
-            </p>
-            <h4 class="attribute-title">Language</h4>
-            <ul class="attri-content">
-              <li class="attribute-tags">Javascript</li>
-              <li class="attribute-tags">Ruby</li>
-              <li class="attribute-tags">Html</li>
-              <li class="attribute-tags">Css</li>
-            </ul>
-          </div>
-        </section>
-
-        <section class="flex-container">
-          <div class="flex-box">
-            <p class="attribute-ellip">
-              <img class="attribute-img" src="./image/framework.svg" alt="framework" />
-            </p>
-            <h4 class="attribute-title">Framework</h4>
-            <ul class="attri-content">
-              <li class="attribute-tags">Bootstrap</li>
-              <li class="attribute-tags">Ruby</li>
-              <li class="attribute-tags">RSpec</li>
-              <li class="attribute-tags">Capybara</li>
-              <li class="attribute-tags">Selenium</li>
-            </ul>
-          </div>
-        </section>
-
-        <section class="flex-container">
-          <div class="flex-box">
-            <p class="attribute-ellip">
-              <img class="attribute-img" src="./image/skill.svg" alt="skill" />
-            </p>
-            <h4 class="attribute-title">Skills</h4>
-            <ul class="attri-content">
-              <li class="attribute-tags">Codekit</li>
-              <li class="attribute-tags">Github</li>
-              <li class="attribute-tags">Codepen</li>
-              <li class="attribute-tags">Gitlab</li>
-              <li class="attribute-tags">Terminal</li>
-            </ul>
-          </div>
-        </section>
+      </section>
+      <section class="flex-container margin-left-right-auto">
+        <div class="flex-box">
+          <p class="attribute-ellip">
+            <img class="attribute-img" src="./image/language.svg" alt="lang" />
+          </p>
+          <h4 class="attribute-title">Language</h4>
+          <ul class="attri-content">
+            <li class="attribute-tags">Javascript</li>
+            <li class="attribute-tags">Ruby</li>
+            <li class="attribute-tags">Html</li>
+            <li class="attribute-tags">Css</li>
+          </ul>
+        </div>
+        <div class="flex-box">
+          <p class="attribute-ellip">
+            <img class="attribute-img" src="./image/framework.svg" alt="framework" />
+          </p>
+          <h4 class="attribute-title">Framework</h4>
+          <ul class="attri-content">
+            <li class="attribute-tags">Bootstrap</li>
+            <li class="attribute-tags">Ruby</li>
+            <li class="attribute-tags">RSpec</li>
+            <li class="attribute-tags">Capybara</li>
+            <li class="attribute-tags">Selenium</li>
+          </ul>
+        </div>
+        <div class="flex-box">
+          <p class="attribute-ellip">
+            <img class="attribute-img" src="./image/skill.svg" alt="skill" />
+          </p>
+          <h4 class="attribute-title">Skills</h4>
+          <ul class="attri-content">
+            <li class="attribute-tags">Codekit</li>
+            <li class="attribute-tags">Github</li>
+            <li class="attribute-tags">Codepen</li>
+            <li class="attribute-tags">Gitlab</li>
+            <li class="attribute-tags">Terminal</li>
+          </ul>
+        </div>
       </section>
       <section class="contact">
         <h4 class="contact-text">
@@ -256,10 +248,12 @@
             <input type="submit" value="Get in touch" />
           </div>
         </form>
-
-        <div class="contact-img"></div>
       </section>
-      <footer class="intro-section margin-left-right-auto">
+      <footer class="section">
+        <p class="desktop1"></p>
+        <p class="desktop2"></p>
+        <p class="desktop3"></p>
+        <span class="line2"></span>
         <ul class="socials-list after">
           <li class="socials-lists-item-after margin-left-right-auto">
             <div class="icon github">
@@ -344,10 +338,7 @@
             </div>
           </li>
         </ul>
-        <p>
-          <b><a href="" target="_blank">debbyblessing1234@gmail.com</a></b>
-        </p>
-        <span class="line2"></span>
+        <p></p>
       </footer>
     </main>
   </body>
