adding contact styling

--- a/index.html
+++ b/index.html
@@ -225,8 +225,9 @@
         <h4 class="contact-text">
           I'm always interested in hearing about new project, so if you'd like to chat please get in
           touch.
+         <span class="desktop1"></span>
         </h4>
-        <form action="https://formspree.io/f/mbjwdkeq" class="form-container" method="post">
+        <form action="https://formspree.io/f/mbjwdkeq " class="form-container" method="post">
           <input
             type="text"
             name="name"
@@ -247,14 +248,13 @@
           <div class="row">
             <input type="submit" value="Get in touch" />
           </div>
+          <p class="desktop2"></p>
+          <p class="desktop3"></p>
         </form>
       </section>
-      <footer class="section">
-        <p class="desktop1"></p>
-        <p class="desktop2"></p>
-        <p class="desktop3"></p>
-        <span class="line2"></span>
-        <ul class="socials-list after">
+      <footer class="section margin-left-right-auto">
+        <div class="line2"></div>
+        <ul class="socials-list-after">
           <li class="socials-lists-item-after margin-left-right-auto">
             <div class="icon github">
               <a href="https://github.com/ibukun53/"
@@ -338,7 +338,6 @@
             </div>
           </li>
         </ul>
-        <p></p>
       </footer>
     </main>
   </body>
