--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <!-- Top Navigation Menu -->
     <nav class="navbar margin-left-right-auto">
-      <a class="welcome" href="#">Welcome</a>
+      <!--<a class="welcome" href="#">Welcome</a>-->
       <div class="button">
-        <div class="link"></div>
-        <div class="link"></div>
-        <div class="link"></div>
+        <div class="link">Portfolio</div>
+        <div class="link">About</div>
+        <div class="link">Contact</div>
       </div>
     </nav>
     <main>
@@ -169,8 +169,8 @@
               </div>
             </div>
           </div>
-          </article>
-          <article class="works">
+        </article>
+        <article class="works">
           <div class="grid">
             <div class="grid-item">
               <div class="card">
@@ -185,42 +185,43 @@
                 <button-type name="button " class="see-projects content-btn"
                   >See Project</button-type
                 >
-                </div>
-                </div>
-                </div>
-                <div class="grid">
-                  <div class="grid-item">
-                    <div class="card">
-                      <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
-                      <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
-                      <ul class="card-content margin-left-right-auto">
-                        <li class="content-tags">Ruby on rails</li>
-                        <li class="content-tags">css</li>
-                        <li class="content-tags">Javascript</li>
-                        <li class="content-tags">html</li>
-                      </ul>
-                      <button-type name="button " class="see-projects content-btn"
-                        >See Project</button-type
-                      ></div>
-                      </div>
-                      </div>
-                      <div class="grid">
-                        <div class="grid-item">
-                          <div class="card">
-                            <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
-                            <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
-                            <ul class="card-content margin-left-right-auto">
-                              <li class="content-tags">Ruby on rails</li>
-                              <li class="content-tags">css</li>
-                              <li class="content-tags">Javascript</li>
-                              <li class="content-tags">html</li>
-                            </ul>
-                            <button-type name="button " class="see-projects content-btn"
-                              >See Project</button-type
-                            >
-                            </div>
-                            </div>
-                            </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="grid-item">
+              <div class="card">
+                <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
+                <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
+                <ul class="card-content margin-left-right-auto">
+                  <li class="content-tags">Ruby on rails</li>
+                  <li class="content-tags">css</li>
+                  <li class="content-tags">Javascript</li>
+                  <li class="content-tags">html</li>
+                </ul>
+                <button-type name="button " class="see-projects content-btn"
+                  >See Project</button-type
+                >
+              </div>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="grid-item">
+              <div class="card">
+                <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
+                <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
+                <ul class="card-content margin-left-right-auto">
+                  <li class="content-tags">Ruby on rails</li>
+                  <li class="content-tags">css</li>
+                  <li class="content-tags">Javascript</li>
+                  <li class="content-tags">html</li>
+                </ul>
+                <button-type name="button " class="see-projects content-btn"
+                  >See Project</button-type
+                >
+              </div>
+            </div>
+          </div>
         </article>
       </article>
       <section class="about">
