--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- Top Navigation Menu -->
     <nav class="navbar margin-left-right-auto">
-      <!--<a class="welcome" href="#">Welcome</a>-->
+      <a class="welcome" href="#">Welcome</a>
       <div class="button">
         <div class="link">Portfolio</div>
         <div class="link">About</div>
