--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav class="navbar margin-left-right-auto">
       <a class="welcome" href="#">Welcome</a>
       <div class="button">
-        <div class="link">Portfolio</div>
-        <div class="link">About</div>
-        <div class="link">Contact</div>
+        <div class="link"><span class="links">Portfolio</span></div>
+        <div class="link"><span class="links">About</span></div>
+        <div class="link"><span class="links">Contact</span></div>
       </div>
     </nav>
     <main>
