adding additional content

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav class="navbar margin-left-right-auto">
       <a class="welcome" href="#">Welcome</a>
       <div class="button">
-        <div class="link"><a href="" target="_blank">Portfolio</a></div>
-          <div class="link"><a href="" target="_blank">About</a></div>
-            <div class="link"><a href="" target="_blank">Contact</a></div>
+        <div class="link"><a class="links" href="" target="_blank">Portfolio</a></div>
+        <div class="link"><a class="links" href="" target="_blank">About</a></div>
+        <div class="link"><a class="links" href="" target="_blank">Contact</a></div>
       </div>
     </nav>
     <main>
