adding accessibility to content

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My personal portfolio</title>
+    <title>Personal Portfolio</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <!-- Top Navigation Menu -->
-    <nav class="navbar margin-left-right-auto">
+    <nav class="navbar margin-left-right-auto" id="portfolio">
       <a class="welcome" href="#">Welcome</a>
       <div class="button">
-        <div class="link"><a class="links" href="" target="_blank">Portfolio</a></div>
-        <div class="link"><a class="links" href="" target="_blank">About</a></div>
-        <div class="link"><a class="links" href="" target="_blank">Contact</a></div>
+        <div class="link"><a class="links" href="#portfolio" target="_blank">Portfolio</a></div>
+        <div class="link"><a class="links" href="#about" target="_blank">About</a></div>
+        <div class="link"><a class="links" href="#contact" target="_blank">Contact</a></div>
       </div>
     </nav>
     <main>
@@ -116,57 +116,51 @@
       </section>
       <article class="recent">
         <img class="vector-img" src="./image/vector.svg" alt="vector" />
-        <h2 class="works-header">My Recent Works</h2>
+        <h2 class="works-header" id="about">My Recent Works</h2>
         <span class="line"></span>
         <article class="works">
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
-                <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
+                <img class="card-img" src="./image/Screenshot.png" alt="page" />
+                <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
                   <li class="content-tags">css</li>
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
                 </ul>
-                <button-type name="button " class="see-projects content-btn"
-                  >See Project</button-type
-                >
+                <a class="see-projects content-btn" href="" target="_blank">See Project</a>
               </div>
             </div>
           </div>
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
-                <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
+                <img class="card-img" src="./image/Screenshot.png" alt="page" />
+                <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
                   <li class="content-tags">css</li>
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
                 </ul>
-                <button-type name="button " class="see-projects content-btn"
-                  >See Project</button-type
-                >
+                <a class="see-projects content-btn" href="" target="_blank">See Project</a>
               </div>
             </div>
           </div>
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
-                <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
+                <img class="card-img" src="./image/Screenshot.png" alt="page" />
+                <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
                   <li class="content-tags">css</li>
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
                 </ul>
-                <button-type name="button " class="see-projects content-btn"
-                  >See Project</button-type
-                >
+                <a class="see-projects content-btn" href="" target="_blank">See Project</a>
               </div>
             </div>
           </div>
@@ -175,64 +169,58 @@
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
-                <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
+                <img class="card-img" src="./image/Screenshot.png" alt="page" />
+                <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
                   <li class="content-tags">css</li>
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
                 </ul>
-                <button-type name="button " class="see-projects content-btn"
-                  >See Project</button-type
-                >
+                <a class="see-projects content-btn" href="" target="_blank">See Project</a>
               </div>
             </div>
           </div>
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
-                <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
+                <img class="card-img" src="./image/Screenshot.png" alt="page" />
+                <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
                   <li class="content-tags">css</li>
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
                 </ul>
-                <button-type name="button " class="see-projects content-btn"
-                  >See Project</button-type
-                >
+                <a class="see-projects content-btn" href="" target="_blank">See Project</a>
               </div>
             </div>
           </div>
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
-                <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
+                <img class="card-img" src="./image/Screenshot.png" alt="page" />
+                <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
                   <li class="content-tags">css</li>
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
                 </ul>
-                <button-type name="button " class="see-projects content-btn"
-                  >See Project</button-type
-                >
+                <a class="see-projects content-btn" href="" target="_blank">See Project</a>
               </div>
             </div>
           </div>
         </article>
       </article>
       <section class="about">
-        <h1 class="about-header">About Me</h1>
+        <h2 class="about-header">About Me</h2>
         <p class="about-text">
           I can help you build a product,feature or website Look through some of my work and
           experience! If you like what you see and have a project you need coded,dont hestiate to
           contact me
         </p>
-        <button-type class="about-btn">Get My Resume</button-type>
+        <a class="about-btn" href="" target="_blank">Get My Resume</a>
         <div class="about2"></div>
       </section>
       <section class="flex-container margin-left-right-auto">
@@ -240,7 +228,7 @@
           <p class="attribute-ellip">
             <img class="attribute-img" src="./image/language.svg" alt="lang" />
           </p>
-          <h4 class="attribute-title">Language</h4>
+          <h3 class="attribute-title">Language</h3>
           <ul class="attri-content">
             <li class="attribute-tags">Javascript</li>
             <li class="attribute-tags">Ruby</li>
@@ -252,7 +240,7 @@
           <p class="attribute-ellip">
             <img class="attribute-img" src="./image/framework.svg" alt="framework" />
           </p>
-          <h4 class="attribute-title">Framework</h4>
+          <h3 class="attribute-title">Framework</h3>
           <ul class="attri-content">
             <li class="attribute-tags">Bootstrap</li>
             <li class="attribute-tags">Ruby</li>
@@ -265,7 +253,7 @@
           <p class="attribute-ellip">
             <img class="attribute-img" src="./image/skill.svg" alt="skill" />
           </p>
-          <h4 class="attribute-title">Skills</h4>
+          <h3 class="attribute-title">Skills</h3>
           <ul class="attri-content">
             <li class="attribute-tags">Codekit</li>
             <li class="attribute-tags">Github</li>
@@ -275,7 +263,7 @@
           </ul>
         </div>
       </section>
-      <section class="contact">
+      <section class="contact" id="contact">
         <h4 class="contact-text">
           I'm always interested in hearing about new project, so if you'd like to chat please get in
           touch.
