--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           <ul class="socials-list">
             <li class="socials-lists-item margin-left-right-auto">
               <div class="icon github">
-                <a href="https://github.com/ibukun53/"
-                  ><svg
+                <a href="https://github.com/ibukun53/" aria-label="Github">
+                  <svg
                     class="githubsize"
                     viewBox="0 0 19 20"
                     fill="none"
@@ -45,7 +45,7 @@
                 ></a>
               </div>
               <div class="icon whatsapp">
-                <a href="https://wa.me/2347013729933">
+                <a href="https://wa.me/2347013729933" aria-label="Whatsapp">
                   <svg
                     class="whatsappsize"
                     fill="#000000"
@@ -60,8 +60,8 @@
                 </a>
               </div>
               <div class="icon linked">
-                <a href="https://www.linkedin.com/in/ibukun53/"
-                  ><svg
+                <a href="https://www.linkedin.com/in/ibukun53/" aria-label="Linkedlin">
+                  <svg
                     class="linkedsize"
                     viewBox="0 0 21 20"
                     fill="none"
@@ -82,7 +82,7 @@
                 ></a>
               </div>
               <div class="icon facebook">
-                <a href="https://web.facebook.com/debby.blessing.1460">
+                <a href="https://web.facebook.com/debby.blessing.1460" aria-label="Facebook">
                   <svg
                     class="facebooksize"
                     fill="#000000"
@@ -92,11 +92,12 @@
                     <path
                       d="M25,3C12.85,3,3,12.85,3,25c0,11.03,8.125,20.137,18.712,21.728V30.831h-5.443v-5.783h5.443v-3.848 c0-6.371,3.104-9.168,8.399-9.168c2.536,0,3.877,0.188,4.512,0.274v5.048h-3.612c-2.248,0-3.033,2.131-3.033,4.533v3.161h6.588 l-0.894,5.783h-5.694v15.944C38.716,45.318,47,36.137,47,25C47,12.85,37.15,3,25,3z"
                       fill="#505F79"
-                    /></svg
-                ></a>
+                    />
+                  </svg>
+                </a>
               </div>
               <div class="icon telegram">
-                <a href="https://t.me/debbie1234">
+                <a href="https://t.me/debbie1234" aria-label="telegram">
                   <svg
                     class="telegramsize"
                     fill="#000000"
@@ -299,8 +300,8 @@
           <ul class="socials-list-after">
             <li class="socials-lists-item-after margin-left-right-auto">
               <div class="icon github">
-                <a href="https://github.com/ibukun53/"
-                  ><svg
+                <a href="https://github.com/ibukun53/" aria-label="github">
+                  <svg
                     class="githubsize"
                     viewBox="0 0 19 20"
                     fill="none"
@@ -313,7 +314,7 @@
                 ></a>
               </div>
               <div class="icon whatsapp">
-                <a href="https://wa.me/2347013729933">
+                <a href="https://wa.me/2347013729933" aria-label="whatsapp">
                   <svg
                     class="whatsappsize"
                     fill="#000000"
@@ -328,7 +329,7 @@
                 </a>
               </div>
               <div class="icon linked">
-                <a href="https://www.linkedin.com/in/ibukun53/"
+                <a href="https://www.linkedin.com/in/ibukun53/" aria-label="linkedin"
                   ><svg
                     class="linkedsize"
                     viewBox="0 0 21 20"
@@ -350,7 +351,7 @@
                 ></a>
               </div>
               <div class="icon facebook">
-                <a href="https://web.facebook.com/debby.blessing.1460">
+                <a href="https://web.facebook.com/debby.blessing.1460" aria-label="facebook">
                   <svg
                     class="facebooksize"
                     fill="#000000"
@@ -364,7 +365,7 @@
                 ></a>
               </div>
               <div class="icon telegram">
-                <a href="https://t.me/debbie1234">
+                <a href="https://t.me/debbie1234" aria-label="Telegram">
                   <svg
                     class="telegramsize"
                     fill="#000000"
