--- a/index.html
+++ b/index.html
@@ -131,7 +131,11 @@
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
                 </ul>
-                <a class="see-projects content-btn" href="" target="_blank">See Project</a>
+                <div class="content-btn">
+                  <a href="" aria-label="button">
+                    <button-style class="see-projects">See Project </button-style>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -146,7 +150,11 @@
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
                 </ul>
-                <a class="see-projects content-btn" href="" target="_blank">See Project</a>
+                <div class="content-btn">
+                  <a href="" aria-label="button">
+                    <button-style class="see-projects">See Project </button-style>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -161,7 +169,11 @@
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
                 </ul>
-                <a class="see-projects content-btn" href="" target="_blank">See Project</a>
+                <div class="content-btn">
+                  <a href="" aria-label="button">
+                    <button-style class="see-projects">See Project </button-style>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -178,7 +190,11 @@
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
                 </ul>
-                <a class="see-projects content-btn" href="" target="_blank">See Project</a>
+                <div class="content-btn">
+                  <a href="" aria-label="button">
+                    <button-style class="see-projects">See Project </button-style>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -193,7 +209,11 @@
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
                 </ul>
-                <a class="see-projects content-btn" href="" target="_blank">See Project</a>
+                <div class="content-btn">
+                  <a href="" aria-label="button">
+                    <button-style class="see-projects">See Project </button-style>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -208,7 +228,11 @@
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
                 </ul>
-                <a class="see-projects content-btn" href="" target="_blank">See Project</a>
+                <div class="content-btn">
+                  <a href="" aria-label="button">
+                    <button-style class="see-projects">See Project </button-style>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -221,7 +245,11 @@
           experience! If you like what you see and have a project you need coded,dont hestiate to
           contact me
         </p>
-        <a class="about-btn" href="" target="_blank">Get My Resume</a>
+        <div class="about-btn">
+          <a href="" target="_blank">
+            <button-type class="btn">Get My Resume </button-type>
+          </a>
+        </div>
         <div class="about2"></div>
       </section>
       <section class="flex-container margin-left-right-auto">
