adding explicit size to image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="index.css" />
-    <link rel="preload" href="/assets/intel" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/assets/intel" as="font" type="font/woff2" crossorigin />
   </head>
   <body>
     <!-- Top Navigation Menu -->
@@ -124,7 +124,7 @@
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" />
+                <img class="card-img" src="./image/Screenshot.png" alt="page" size="20%" />
                 <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
@@ -133,7 +133,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="" aria-label="button">
+                  <a href="#" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -143,7 +143,7 @@
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" />
+                <img class="card-img" src="./image/Screenshot.png" alt="page" size="20%" />
                 <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
@@ -152,7 +152,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="" aria-label="button">
+                  <a href="#" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -162,7 +162,7 @@
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" />
+                <img class="card-img" src="./image/Screenshot.png" alt="page" size="20%" />
                 <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
@@ -171,7 +171,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="" aria-label="button">
+                  <a href="#" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -183,7 +183,7 @@
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" />
+                <img class="card-img" src="./image/Screenshot.png" alt="page" size="20%" />
                 <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
@@ -192,7 +192,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="" aria-label="button">
+                  <a href="#" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -202,7 +202,7 @@
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" />
+                <img class="card-img" src="./image/Screenshot.png" alt="page" size="20%" />
                 <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
@@ -211,7 +211,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="" aria-label="button">
+                  <a href="#top" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -221,7 +221,7 @@
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" />
+                <img class="card-img" src="./image/Screenshot.png" alt="page" size="20%" />
                 <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
@@ -230,7 +230,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="" aria-label="button">
+                  <a href="#" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -247,7 +247,7 @@
           contact me
         </p>
         <div class="about-btn">
-          <a href="" target="_blank">
+          <a href="#" target="_blank" aria-label="button">
             <button-type class="btn">Get My Resume </button-type>
           </a>
         </div>
