--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A personal portfolio is an online representation of work that wascreated, as well as my skills and experiences."
+    />
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="index.css" />
   </head>
+  <script defer src="script.js"></script>
   <body>
     <!-- Top Navigation Menu -->
     <nav class="navbar margin-left-right-auto" id="portfolio">
       <a class="welcome" href="#">Welcome</a>
       <div class="button">
-        <div class="link"><a class="links" href="#portfolio" target="_blank">Portfolio</a></div>
-        <div class="link"><a class="links" href="#about" target="_blank">About</a></div>
-        <div class="link"><a class="links" href="#contact" target="_blank">Contact</a></div>
+        <div class="link"><a class="links" href="#portfolio" target="">Portfolio</a></div>
+        <div class="link"><a class="links" href="#about" target="">About</a></div>
+        <div class="link"><a class="links" href="#contact" target="">Contact</a></div>
       </div>
     </nav>
     <main>
@@ -259,10 +264,10 @@
           </p>
           <h3 class="attribute-title">Language</h3>
           <ul class="attri-content">
-            <li class="attribute-tags">Javascript</li>
-            <li class="attribute-tags">Ruby</li>
-            <li class="attribute-tags">Html</li>
-            <li class="attribute-tags">Css</li>
+            <li class="attribute-tags contrast">Javascript</li>
+            <li class="attribute-tags contrast">Ruby</li>
+            <li class="attribute-tags contrast">Html</li>
+            <li class="attribute-tags contrast">Css</li>
           </ul>
         </div>
         <div class="flex-box">
@@ -271,11 +276,11 @@
           </p>
           <h3 class="attribute-title">Framework</h3>
           <ul class="attri-content">
-            <li class="attribute-tags">Bootstrap</li>
-            <li class="attribute-tags">Ruby</li>
-            <li class="attribute-tags">RSpec</li>
-            <li class="attribute-tags">Capybara</li>
-            <li class="attribute-tags">Selenium</li>
+            <li class="attribute-tags contrast">Bootstrap</li>
+            <li class="attribute-tags contrast">Ruby</li>
+            <li class="attribute-tags contrast">RSpec</li>
+            <li class="attribute-tags contrast">Capybara</li>
+            <li class="attribute-tags contrast">Selenium</li>
           </ul>
         </div>
         <div class="flex-box">
@@ -284,11 +289,11 @@
           </p>
           <h3 class="attribute-title">Skills</h3>
           <ul class="attri-content">
-            <li class="attribute-tags">Codekit</li>
-            <li class="attribute-tags">Github</li>
-            <li class="attribute-tags">Codepen</li>
-            <li class="attribute-tags">Gitlab</li>
-            <li class="attribute-tags">Terminal</li>
+            <li class="attribute-tags contrast">Codekit</li>
+            <li class="attribute-tags contrast">Github</li>
+            <li class="attribute-tags contrast">Codepen</li>
+            <li class="attribute-tags contrast">Gitlab</li>
+            <li class="attribute-tags contrast">Terminal</li>
           </ul>
         </div>
       </section>
