--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="A personal portfolio is an online representation of work that wascreated, as well as my skills and experiences."
+      content="A personal portfolio is an online representation of work that was created, as well as my skills and experiences."
     />
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="index.css" />
   </head>
-  <script defer src="script.js"></script>
   <body>
     <!-- Top Navigation Menu -->
     <nav class="navbar margin-left-right-auto" id="portfolio">
       <a class="welcome" href="#">Welcome</a>
       <div class="button">
-        <div class="link"><a class="links" href="#portfolio" target="">Portfolio</a></div>
-        <div class="link"><a class="links" href="#about" target="">About</a></div>
-        <div class="link"><a class="links" href="#contact" target="">Contact</a></div>
+        <div class="link"><a class="links" href="#portfolio">Portfolio</a></div>
+        <div class="link"><a class="links" href="#about">About</a></div>
+        <div class="link"><a class="links" href="#contact">Contact</a></div>
       </div>
     </nav>
     <main>
@@ -128,7 +127,7 @@
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" size="20%" />
+                <img class="card-img" src="./image/Screenshot.png" alt="page" />
                 <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
@@ -147,7 +146,7 @@
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" size="20%" />
+                <img class="card-img" src="./image/Screenshot.png" alt="page" />
                 <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
@@ -166,7 +165,7 @@
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" size="20%" />
+                <img class="card-img" src="./image/Screenshot.png" alt="page" />
                 <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
@@ -187,7 +186,7 @@
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" size="20%" />
+                <img class="card-img" src="./image/Screenshot.png" alt="page" />
                 <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
@@ -206,7 +205,7 @@
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" size="20%" />
+                <img class="card-img" src="./image/Screenshot.png" alt="page" />
                 <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
@@ -225,7 +224,7 @@
           <div class="grid">
             <div class="grid-item">
               <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" size="20%" />
+                <img class="card-img" src="./image/Screenshot.png" alt="page" />
                 <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
                 <ul class="card-content margin-left-right-auto">
                   <li class="content-tags">Ruby on rails</li>
